<resources>
    <string name="app_name">android-project</string>
    <string name="welcome_message">Welcome to WatchWorthy</string>
    <string name="sign_in_button">Sign in</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="goto_register_button">Go to register</string>
    <string name="goto_login_button">Go to login</string>
    <string name="input_hint_email">Email</string>
    <string name="input_hint_password">Password</string>
    <string name="input_hint_forename">First name</string>
    <string name="input_hint_surname">Last name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_forename">Invalid first name</string>
    <string name="invalid_surname">Invalid last name</string>
    <string name="login_successful">Login successful</string>
    <string name="register_successful">Account created</string>
    <string name="fetch_error">Failed to fetch the data</string>
    <string name="watchlist_header">My Watchlist</string>
    <string name="goto_movies">Add more movies</string>
    <string name="add_movie">Add to watchlist</string>
    <string name="search">Search</string>
    <string name="invalid_search">Nothing to search for</string>
    <string name="movie_added">Movie added</string>
    <string name="movie_added_fail">Failed to add movie</string>
    <string name="logout">Logout</string>
    <string name="view_watchlist">View Watchlist</string>
</resources>