<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black">

    <TextView
        android:id="@+id/tv_watchlist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watchlist_header"
        android:textSize="24sp"
        android:textColor="@color/yellow"
        android:layout_marginTop="@dimen/default_space"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <LinearLayout
        android:id="@+id/watchlist_btns_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_watchlist_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <Button
            android:id="@+id/add_movies_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/goto_movies"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/logout"
            android:layout_weight="1"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_watchlist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="@dimen/default_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/watchlist_btns_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_watchlist"
        tools:itemCount="50"/>

</androidx.constraintlayout.widget.ConstraintLayout>
